--- a/views/navbar.ejs
+++ b/views/navbar.ejs
@@ -13,7 +13,7 @@
         <li class="nav-item">
           <a class="nav-link <% if (view == 'shop') { %>
             active
-          <% } %>" href="/shop">Obchod</a>
+          <% } %>" href="/shop">Nastavenia</a>
         </li>
         <li class="nav-item">
           <strong class="nav-link">👤 <%= user?.name ?? 'odhlásený' %></strong>
