--- a/views/editor.ejs
+++ b/views/editor.ejs
@@ -1,3 +1,15 @@
+<%  
+function getLastDifficulty(lid) {
+    let result = -1
+    for (let i = 0; i < user.completedLevels.length; i++) {
+        const element = user.completedLevels[i]
+        if(element.level == lid) {
+            result = element.difficulty
+        }
+    }
+    return result
+}
+%>
 <script defer src="/game.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/1.0.0/anime.min.js"></script>
 <script defer src="/bgEffect.js"></script>
@@ -6,7 +18,7 @@
         <h4 class="text-center">Úlohy</h4>
         <ul class="list-group">
             <% levels.forEach(level => { %>
-                <% if (user.completedLevels.includes(level.id)) { %>
+                <% if (getLastDifficulty(level.id) != -1) { %>
                     <a class="list-group-item list-group-item-success" href="/editor/<%= level.id %> " tabindex="-1"><%- level.name %> </a>
                 <% } else { %>
                     <a class="list-group-item list-group-item-action" href="/editor/<%= level.id %> " tabindex="-1"><%- level.name %> </a>
@@ -37,7 +49,9 @@
         </div>
         <div id="results">
             <h3>Výsledky</h3>
-            <% if (user.completedLevels.includes(lid)) { %>
+            <% let diff = getLastDifficulty(lid)
+            if (diff != -1) { %>
+            <p>Obtiažnosť: <span class="text-<%= presets[diff].style %>"><%= presets[diff].name %></span> </p>
             <img src="/histograms/<%= user.name %>/<%= lid %>.png" title="Histogram relatívnych posunov stlačení klávesu" alt="Nebolo možné načítať histogram presnosti">
             <% } else { %>
             <p>Tento level nie je dokončený.</p>
